####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.1.0 (not released yet)
############################

:Codename: 
:2.1.0: 

Bug Fixes
*********

* Using the ``bzrlib.chk_map`` module from within multiple threads at the
  same time was broken due to race conditions with a module level page
  cache. This shows up as a KeyError in the ``bzrlib.lru_cache`` code with
  ``bzrlib.chk_map`` in the backtrace, and can be triggered without using
  the same high level objects such as ``bzrlib.repository.Repository``
  from different threads. chk_map now uses a thread local cache which may
  increase memory pressure on processes using threads.
  (Robert Collins, John Arbash Meinel, #514090)

bzr 2.1.0rc2
############

:Codename: after the bubbles
:2.1.0rc2: 2010-01-29

This is a quick-turn-around to update a small issue with our new per-file
merge hook. We expect no major changes from this to the final 2.1.0.

API Changes
***********

* The new ``merge_file_content`` hook point has been altered to provide a
  better API where state for extensions can be stored rather than the
  too-simple function based approach. This fixes a performance regression
  where branch configuration would be parsed per-file during merge. As
  part of this the included news_merger has been refactored into a base
  helper class ``bzrlib.merge.ConfigurableFileMerger``.
  (Robert Collins, John Arbash Meinel, #513822)


bzr 2.1.0rc1
############

:Codename: the 'new' stable
:2.1.0rc1: 2009-01-21

This is the first stable release candidate for Bazaar's 2.1 series. From
this point onwards, the 2.1 series will be considered stable (as the 2.0
series) and only bugfixes are expected to be incorporated. The dozen or so
bugfixes in the 2.0.4 release are also included in this release (along
with more than 15 more bugfixes). Some of the interesting features are
support for per-file merge hooks, ``bzr unshelve --preview``, support